--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matchrimoney - Find Your Perfect Wedding Match</title>
+    <meta name="description" content="Matchrimony - Connect with couples, share wedding costs, and save money on your dream wedding" />
+    <meta name="theme-color" content="#ff6b6b" />
+    <title>Matchrimony - Find Your Perfect Wedding Match</title>
   </head>
   <body>
     <div id="root"></div>
